<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/room_item_background"
    android:layout_marginTop="@dimen/margin_8dp_small">

    <androidx.cardview.widget.CardView
        android:id="@+id/room_images"
        android:layout_width="match_parent"
        android:layout_height="@dimen/room_item_image_height"
        android:layout_marginHorizontal="@dimen/margin_16dp_small"
        android:layout_marginTop="@dimen/margin_16dp_small"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_room_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/room_mock"
            tools:ignore="ContentDescription"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_room_name"
        style="@style/hotel_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:text="@string/room_name_mock"
        app:layout_constraintEnd_toEndOf="@id/room_images"
        app:layout_constraintStart_toStartOf="@+id/room_images"
        app:layout_constraintTop_toBottomOf="@+id/room_images" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/room_peculiarities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:chipSpacingHorizontal="@dimen/margin_8dp_small"
        app:chipSpacingVertical="@dimen/margin_2dp_small"
        app:layout_constraintEnd_toEndOf="@id/room_images"
        app:layout_constraintStart_toStartOf="@+id/room_images"
        app:layout_constraintTop_toBottomOf="@id/tv_room_name">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/peculiarities_chip_background"
            android:checkable="false"
            android:paddingHorizontal="@dimen/margin_10dp_small"
            android:paddingVertical="@dimen/margin_5dp_small"
            android:text="@string/peculiarity_1"
            app:chipCornerRadius="5dp"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/peculiarities_chip_background"
            android:checkable="false"
            android:paddingHorizontal="@dimen/margin_10dp_small"
            android:paddingVertical="@dimen/margin_5dp_small"
            android:text="@string/peculiarity_2"
            app:chipCornerRadius="5dp"
            app:chipStrokeWidth="0dp" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/room_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:background="@drawable/room_details_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/room_images"
        app:layout_constraintTop_toBottomOf="@id/room_peculiarities">


        <TextView
            style="@style/room_details_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="@dimen/margin_5dp_small"
            android:layout_marginStart="@dimen/margin_10dp_small"
            android:layout_marginEnd="@dimen/margin_2dp_small"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/room_details" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_right_arrow"
            app:tint="@color/room_details_button_text"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp_small"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/room_images"
        app:layout_constraintTop_toBottomOf="@+id/room_details_button">

        <TextView
            android:id="@+id/tv_price"
            style="@style/price_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_price" />

        <TextView
            android:id="@+id/tv_price_description"
            style="@style/price_description_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp_small"
            android:text="@string/room_price_description" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/booking_button_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp_small"
        android:backgroundTint="@color/button_color"
        android:paddingVertical="15dp"
        android:text="@string/room_choose_button"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_block" />

</androidx.constraintlayout.widget.ConstraintLayout>